--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,12 @@
   "framework": null,
   "builds": [
     { "src": "api/**/*.js", "use": "@vercel/node" },
-    { "src": "index*.html", "use": "@vercel/static" },
-    { "src": "main*.js", "use": "@vercel/static" },
-    { "src": "assets/**", "use": "@vercel/static" },
-    { "src": "public/**", "use": "@vercel/static" }
+    { "src": "**/*.html",   "use": "@vercel/static" },
+    { "src": "*.js",        "use": "@vercel/static" },
+    { "src": "assets/**",   "use": "@vercel/static" },
+    { "src": "public/**",   "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/", "dest": "/index-v39.html" }
+    { "src": "/api/(.*)", "dest": "/api/$1" }
   ]
 }
