--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,14 @@
 {
   "version": 2,
+  "framework": null,
+  "builds": [
+    { "src": "api/**/*.js", "use": "@vercel/node" },
+    { "src": "**/*.html",   "use": "@vercel/static" },
+    { "src": "*.js",        "use": "@vercel/static" },
+    { "src": "assets/**",   "use": "@vercel/static" },
+    { "src": "public/**",   "use": "@vercel/static" }
+  ],
   "routes": [
-    { "src": "^/$", "dest": "/index-v39.html" }
+    { "src": "/api/(.*)", "dest": "/api/$1" }
   ]
 }
