--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
-{
+﻿{
   "version": 2,
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "^/api/chat$", "methods": ["POST"], "dest": "/api/chat-live" },
+    { "src": "^/api/chat$", "methods": ["GET"],  "dest": "/api/chat-live" },
     { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": ".*", "dest": "/index.html" }
   ]
 }
