fix(routes): rewrite /api/chat -> /api/chat2 and SPA fallback

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
-  "version": 2,
-  "routes": [
-    { "src": "^/api/chat$",   "dest": "/api/chat-edge" },
-    { "src": "^/api/vitals$", "dest": "/api/vitals" },
-    { "src": "^/api/ping$",   "dest": "/api/ping" },
-    { "handle": "filesystem" },
-    { "src": ".*", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/api/chat", "destination": "/api/chat2" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
