fix(vercel): remove trailing comma; restore valid headers + rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,18 @@
-{
+﻿{
+  "headers": [
+    {
+      "source": "/build-footer.js",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store" }
+      ]
+    },
+    {
+      "source": "/build-meta.json",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store" }
+      ]
+    }
+  ],
   "rewrites": [
     { "source": "/api/chat", "destination": "/api/chat2" },
     { "source": "/(.*)", "destination": "/index.html" }
