fix(build): restore valid package.json (UTF-8 no-BOM) and vercel.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
-﻿{
+{
   "name": "homerates-ui-clean",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "build": "node scripts/build-meta.js"
   }
