--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,1 @@
-﻿{
-  "version": 2,
-  "routes": [
-    { "src": "/api/(.*)",    "dest": "/api/$1" },
-    { "src": "/assets/(.*)", "dest": "/public/assets/$1" },
-    { "src": "/(.*)",        "dest": "/index.html" }
-  ]
-}
+{"version":2,"routes":[{"src":"/api/(.*)","dest":"/api/$1"},{"src":"/assets/(.*)","dest":"/public/assets/$1"},{"src":"/(.*)","dest":"/index.html"}]}
