--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,5 @@
-{"version":2,"routes":[{"src":"/api/(.*)","dest":"/api/$1"},{"src":"/(.*)\\.(js|css|map|svg|png|jpg|jpeg|gif|ico|webp|txt)","dest":"/$1.$2"},{"src":"/assets/(.*)","dest":"/public/assets/$1"},{"src":"/(.*)","dest":"/index.html"}]}
+{"version":2,"routes":[
+  {"src":"/api/(.*)","dest":"/api/$1"},
+  {"src":"/(.*)\\.(js|mjs|css|map|svg|png|jpg|jpeg|gif|ico|webp|txt)","dest":"/$1.$2"},
+  {"src":"/(.*)","dest":"/index.html"}
+]}
