--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "homerates-ui-clean",
-  "private": true,
+  "private": "true",
   "version": "1.0.0",
   "scripts": {
-    "build": "node scripts/build-meta.js"
+    "build": "npm run tailwind:build",
+    "tailwind:build": "tailwindcss -i ./src/styles/tailwind.css -o ./public/assets/app.css --minify",
+    "tailwind:watch": "tailwindcss -i ./src/styles/tailwind.css -o ./public/assets/app.css --watch"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14"
   }
 }
