--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 ﻿{
   "routes": [
     { "src": "^/assets/(.*)$", "dest": "/assets/$1" },
-
-    { "src": "^/api/echo$", "dest": "/api/echo/index.js" },
-    { "src": "^/api/.*$", "status": 404 },
-
+    { "src": "^/api/(.*)$", "dest": "/api/$1" },
     { "src": "^(?!/api/|/assets/).*$", "dest": "/index.html" }
   ]
 }
